--- a/.github/workflows/manual-mvn-test.yml
+++ b/.github/workflows/manual-mvn-test.yml
@@ -1,9 +1,7 @@
-# This is a basic workflow that is manually triggered
+# Workflow to demonstrate running clean maven tests
 
-name: Playing around here
+name: test automation demonstration
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
   workflow_dispatch:
     inputs:
@@ -12,17 +10,12 @@ on:
         default: './mvnw clean test'
         required: true
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   run-tests:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v2
-    # Runs a single command using the runners shell
     - name: Set up Java JDK 11
       uses: actions/setup-java@v1
       with:
