run docker in background for cURL test

--- a/.github/workflows/dockers-running-test.yml
+++ b/.github/workflows/dockers-running-test.yml
@@ -27,6 +27,6 @@ jobs:
     - name: build docker image
       run: docker build -t springio/api-assignment .
     - name: run container
-      run: docker run -p 8080:8080 springio/api-assignment
+      run: docker run -d -p 8080:8080 springio/api-assignment
     - name: run cURL against endpoint
       run: curl --request GET http://localhost:8080/${{ github.event.inputs.endpoint }}
