--- a/.github/workflows/dockers-running-test.yml
+++ b/.github/workflows/dockers-running-test.yml
@@ -24,11 +24,9 @@ jobs:
         architecture: x64
     - name: build jar
       run: ./mvnw clean package
-    - name: cat /etc/hosts
-      run: cat /etc/hosts
     - name: build docker image
       run: docker build -t springio/api-assignment .
     - name: run container
-      run: docker run -d -p 8080:8080 springio/api-assignment
+      run: docker run -d -p 80:8080 springio/api-assignment
     - name: run cURL against endpoint
-      run: curl --request GET http://127.0.0.1:8080/${{ github.event.inputs.endpoint }}
+      run: curl --request GET http://localhost:80/${{ github.event.inputs.endpoint }}
