changing curl cmd

--- a/.github/workflows/dockers-running-test.yml
+++ b/.github/workflows/dockers-running-test.yml
@@ -29,4 +29,4 @@ jobs:
     - name: run container
       run: docker run -d -p 80:8080 springio/api-assignment
     - name: run cURL against endpoint
-      run: curl --request GET http://localhost:80/${{ github.event.inputs.endpoint }}
+      run: curl http://localhost:80/${{ github.event.inputs.endpoint }}
